# usedbot

./: .gitignore  README.md  claude.md  migration.md  package.json  pnpm-lock.yaml  settings.example.json  tsconfig.json  used_market_notifier.spec
apps/cli/: README.md  package.json
apps/cli/src/: index.test.ts  index.ts
docs/: ARCHITECTURE.md  local-toolchain.md  upstream-patches.md  upstream-sync.md
openspec/changes/add-command-cli/: design.md  proposal.md  tasks.md
openspec/changes/add-python-scraper-sidecar/: tasks.md
openspec/changes/add-typescript-core-engine/: proposal.md  tasks.md
openspec/changes/bootstrap-v1-workspace/: proposal.md  tasks.md
openspec/changes/harden-v1-local-toolchain/: design.md  tasks.md
openspec/changes/prepare-v1-workspace-layout/: tasks.md
openspec/specs/command-cli/: spec.md
openspec/specs/project-documentation/: spec.md
openspec/specs/python-scraper-sidecar/: spec.md
openspec/specs/typescript-core-engine/: spec.md
openspec/specs/upstream-vendor-management/: spec.md
openspec/specs/v1-workspace-layout/: spec.md
scrapers/: marketplace_parsers.py  playwright_joonggonara.py
scripts/: live_smoke.py  sync-upstream.sh
services/scraper-sidecar/: README.md  pyproject.toml
services/scraper-sidecar/src/scraper_sidecar/: __init__.py  __main__.py  adapters.py  app.py  contracts.py  mapping.py  service.py
services/scraper-sidecar/tests/: test_adapters.py  test_app.py  test_mapping.py
tests/: test_fixture_parsers.py  test_monitor_engine_behaviors.py  test_playwright_bunjang_parser.py  test_settings_recovery.py
(+26 files in other folders)
