[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "scraper-sidecar"
version = "0.1.0"
description = "Local-only Python scraper sidecar for v1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.8,<4",
  "litestar>=2,<3",
  "playwright>=1.50,<2",
  "uvicorn>=0.30,<1",
]

[project.scripts]
scraper-sidecar = "scraper_sidecar.__main__:main"

[tool.uv]
package = true
